--- a/app/src/main/res/layout/layout_land.xml
+++ b/app/src/main/res/layout/layout_land.xml
@@ -12,17 +12,18 @@
         android:layout_height="wrap_content"
         android:fillViewport="true">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
+
+            <!-- U make my -->
             <ImageView
-                android:id="@+id/i"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:layout_margin="50dp"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/element_i" />
+                android:id="@+id/element1"
+                style="@style/element1"
+                android:src="@drawable/element_1" />
 
 
             <LinearLayout
@@ -30,49 +31,36 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:layout_margin="30dp"
                 android:orientation="vertical"
                 tools:ignore="UselessParent">
 
+
+                <!-- Double tap -->
                 <TextView
                     android:id="@+id/text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="25dp"
-                    android:layout_marginEnd="3dp"
-                    android:layout_marginRight="3dp"
-                    android:text="@string/help_text"
-                    android:textColor="@android:color/white"
-                    android:textSize="14sp" />
+                    style="@style/text"
+                    android:text="@string/help_text" />
 
             </LinearLayout>
 
+            <!-- Circle -->
             <View
                 android:id="@+id/circleBg"
-                android:layout_width="400dp"
-                android:layout_height="400dp"
-                android:background="@drawable/circle_background"
-                android:visibility="gone" />
+                style="@style/circleBg"
+                android:background="@drawable/circle_background" />
 
+            <!-- Heart -->
             <ImageView
                 android:id="@+id/heart"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="center"
-                android:src="@drawable/ic_heart"
-                android:visibility="gone" />
+                style="@style/heart"
+                android:src="@drawable/ic_heart" />
 
+            <!-- PoP -->
             <ImageView
-                android:id="@+id/u"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@+id/i"
-                android:layout_margin="50dp"
-                android:src="@drawable/element_u" />
-
-        </RelativeLayout>
+                android:id="@+id/element2"
+                style="@style/element2"
+                android:src="@drawable/element_2" />
+        </LinearLayout>
     </ScrollView>
 
 </RelativeLayout>
