--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -4,36 +4,25 @@
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_2"
+    android:gravity="center_horizontal"
+    android:background="@drawable/background_2_bigger"
     tools:context="com.example.android.instagramheart.MainActivity">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fillViewport="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
 
 
             <!-- U make my -->
             <ImageView
                 android:id="@+id/element1"
-                style="@style/element1"
-                android:src="@drawable/element_1" />
+                style="@style/element1.horizontal"
+                android:src="@drawable/element_1_big_horiz" />
 
 
             <LinearLayout
                 android:id="@+id/guide"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:orientation="vertical"
                 tools:ignore="UselessParent">
-
 
                 <!-- Double tap -->
                 <TextView
@@ -58,9 +47,9 @@
             <!-- PoP -->
             <ImageView
                 android:id="@+id/element2"
-                style="@style/element2"
-                android:src="@drawable/element_2" />
-        </LinearLayout>
-    </ScrollView>
+                style="@style/element2.horizontal"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/element_2_big" />
+
 
 </RelativeLayout>
